[package]
name = "sliced"
version = "0.2.3"
authors = ["Mojo <clay@mojo.run>"]
build = "build.rs"

[lib]
crate-type = ["dylib"]

[dependencies]
bitflags = "1.0"
libc = "0.2.42"
time = "0.1.40"
libloading = "0.5"
dlopen = "0.1"
dlopen_derive = "0.1.2"
lazy_static = "1.0"
const-cstr = "0.3.0"

[build-dependencies]
gcc = "0.3"
cpp_build = "0.3.2"