[package]
name = "sliced"
version = "0.2.3"
authors = ["Mojo <clay@mojo.run>"]
build = "build.rs"

[lib]
crate-type = ["dylib", "rlib"]

[[example]]
name = "streams"
path = "examples/streams.rs"


[dependencies]
bitflags = "1.0"
libc = "0.2.42"
time = "0.1.40"
libloading = "0.5"
dlopen = "0.1"
dlopen_derive = "0.1.2"
lazy_static = "1.0"
cpp = "0.3"
actix = "0.7"
nix = "0.11"
memmap = "0.6"
winapi = "0.3"
kernel32-sys = "0.2"
spin = "0.4"
page_size = "0.4"

[build-dependencies]
gcc = "0.3"
cpp_build = "0.3.2"