cargo-features = ["edition"]

[package]
edition = "2018"
name = "sliced"
version = "0.2.3"
authors = ["Mojo <clay@mojo.run>"]
build = "build.rs"

[lib]
crate-type = ["dylib", "rlib"]

# [[example]]
# name = "streams"
# path = "examples/streams.rs"


[dependencies]
bitflags = "1.0"
chrono = "0.4"
libc = "0.2.42"
env_logger = "0.5.11"
log = "0.4.0"
lazy_static = "1.0"
spin = "0.4.9"
rand = "0.5"
tempdir = "0.3"
time = "0.1.40"
zstd = "0.4"
smallvec = "0.6"
#futures-preview = "0.3.0-alpha.2"
#hyper = "0.12"


#cpp = "0.3"
#actix = "0.7"
#memmap = "0.6"
#winapi = "0.3"

# futures-preview = "0.3.0-alpha.1"
#futures = "0.1"

#libloading = "0.5"
#dlopen = "0.1"
#dlopen_derive = "0.1.2"

#tokio = "0.1"
#tokio-reactor = "0.1"
#tokio-executor = "0.1"
#tokio-threadpool = "0.1"
#tokio-current-thread = "0.1"
#tokio-timer = "0.1"
#tokio-codec = "0.1"
#tokio-fs = "0.1"
#tokio-io = "0.1"

[target.'cfg(unix)'.dependencies]
nix = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["basetsd", "handleapi", "memoryapi", "minwindef", "std", "sysinfoapi"] }
kernel32-sys = "0.2"

[build-dependencies]
gcc = "0.3"

[dev-dependencies]
tempdir = "0.3"